[package]
name = "electrumx-proxy-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.7.2"
axum = "0.6.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread", "net"] }
reqwest = "0.11"
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
